# tango

./: Bank.cpp  Bank.h  Card.cpp  Card.h  Deck.cpp  Deck.h  README.md  Set.cpp  Set.h  backend.cpp  backend.h  coldesc.h  gui.cpp  readme.md  util.cpp  util.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: Bank.cpp  CMakeLists.txt  Card.cpp  Deck.h  coldesc.cpp  util.cpp  util.h
