cmake_minimum_required(VERSION 3.3)
project(tango)
set(VERSION 0.4)
execute_process(COMMAND wx-config ARGS --version=3.0 --cxxflags OUTPUT_VARIABLE wxcxxflags OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND wx-config ARGS --version=3.0 --libs OUTPUT_VARIABLE wxldflags OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Og -g ${wxcxxflags}")
set(CMAKE_EXE_LINKER_FLAGS "${wxldflags}")
include_directories(".")
add_executable(tango Bank.cpp Card.cpp Deck.cpp Set.cpp backend.cpp coldesc.cpp gui.cpp util.cpp)
target_link_libraries(tango sqlite3)
